@@ -49,9 +49,10 @@ procedure Param is
 
    function CB (Request : in Status.Data) return Response.Data;
 
-   task Server;
-
-   Stopped : Boolean := False;
+   task Server is
+      entry Started;
+      entry Stopped;
+   end Server;
 
    HTTP : AWS.Server.HTTP;
 
@@ -104,11 +105,13 @@ procedure Param is
       Put_Line ("Server started");
       New_Line;
 
-      delay 5.0;
+      accept Started;
 
-      if Stopped = False then
+      select
+         accept Stopped;
+      or delay 5.0;
          Put_Line ("Too much time to do the job !");
-      end if;
+      end select;
 
       AWS.Server.Shutdown (HTTP);
    exception
@@ -131,7 +134,7 @@ procedure Param is
 begin
    Put_Line ("Start main, wait for server to start...");
 
-   delay 2.0;
+   Server.Started;
 
    Request ("http://localhost:7645/call");
    Request ("http://localhost:7645/call call");
@@ -140,7 +143,7 @@ begin
    Request ("http://localhost:7645/call%20call%3fp1=a%20a%3f");
    Request ("http://localhost:7645/spec?p%261=1%3d1&p%3D2=2%262");
 
-   Stopped := True;
+   Server.Stopped;
 
 exception
    when E : others =>
