@@ -49,9 +49,10 @@ procedure Upload is
 
    function CB (Request : in Status.Data) return Response.Data;
 
-   task Server;
-
-   Stopped : Boolean := False;
+   task Server is
+      entry Started;
+      entry Stopped;
+   end Server;
 
    HTTP : AWS.Server.HTTP;
 
@@ -88,11 +89,13 @@ procedure Upload is
       Put_Line ("Server started");
       New_Line;
 
-      delay 5.0;
+      accept Started;
 
-      if Stopped = False then
+      select
+         accept Stopped;
+      or delay 5.0;
          Put_Line ("Too much time to do the job !");
-      end if;
+      end select;
 
       AWS.Server.Shutdown (HTTP);
    exception
@@ -115,12 +118,12 @@ procedure Upload is
 begin
    Put_Line ("Start main, wait for server to start...");
 
-   delay 2.0;
+   Server.Started;
 
    Request ("http://localhost:7642/upload", "upload.ali");
    Request ("http://localhost:7642/upload", "upload.adb");
 
-   Stopped := True;
+   Server.Stopped;
 
 exception
    when E : others =>
